Archive2/ec/a761ae9bbaf585/output
main.cpp:18:1: error: C++ requires a type specifier for all declarations
rx = 0;
^
1 error generated.
